<resources>
    <string name="app_name">Wifi card scanner</string>
    <string name="photo">Photo</string>
    <string name="detect">Detect</string>
    <string name="no_text">no text</string>
    <string name="please_use_camera_button_to_take_photo">Please use camera button to take photo</string>
    <string name="detected_text_from_image">Detected text from image</string>
    <string name="camera">CAMERA</string>
    <string name="select_network_ssid">Select Network SSID:</string>
    <string name="select_network">Select Network SSID:</string>
    <string name="select_or_input_name">Select or input name</string>
    <string name="network_name_ssid">Network Name SSID</string>
    <string name="network_pass" />
    <string name="Password">Password</string>
    <string name="pre_shared_key">Pre-Shared Key</string>
    <string name="shared_key">keys</string>
    <string name="Default" />
    <string name="Security">Security</string>
    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="ok">OK</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>

    <string-array name="shared_keys">
        <item>Wep</item>
        <item>WPA2</item>
        <item>WPA</item>
    </string-array>
</resources>