<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="MainActivity">

        <Button
            android:id="@+id/photoBtn"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="204dp"
            android:onClick="photoButton"
            android:text="@string/camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testView"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Submit"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="128dp"
            android:layout_height="104dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtView"
            android:layout_width="210dp"
            android:layout_height="146dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:focusable="true"
            android:isScrollContainer="true"
            android:longClickable="true"
            android:scrollbars="vertical"
            android:text="@string/detected_text_from_image"
            android:textIsSelectable="true"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="73dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/network_name_ssid"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtView"
            tools:visibility="visible">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/select_or_input_name"
                android:textColor="#757575"
                android:textSize="18sp"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="90dp"
            android:hint="@string/Password"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:visibility="visible">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/select_or_input_name"
                android:textColor="#757575"
                android:textSize="18sp"
                tools:ignore="LabelFor" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="17dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintStart_toEndOf="@+id/testView"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            tools:visibility="visible">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Default"
                android:textColor="#757575"
                tools:ignore="LabelFor" />


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <TextView
            android:id="@+id/testView"
            android:layout_width="101dp"
            android:layout_height="43dp"
            android:layout_marginTop="31dp"
            android:text="@string/Security"
            app:layout_constraintBottom_toTopOf="@+id/photoBtn"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>